2008-04-02  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_activate_chain),
	(gst_ogg_demux_read_chain), (gst_ogg_demux_handle_page):
	The new-pad-group sequence is add-pads, no-more-pads, add-pads,
	no-more-pads...

2008-04-02  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstqueue2.c: (update_out_rates),
	(gst_queue_open_temp_location_file),
	(gst_queue_close_temp_location_file), (gst_queue_handle_src_event),
	(gst_queue_handle_src_query), (gst_queue_set_property):
	Update the estimated input data when we push out a buffer.
	Add some debug info about the temp file.
	Only forward src events when we are not using a temp file.
	Don't block the duration query, we need to find something better.
	Don't leak the temp filename.

2008-04-01  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	Require GLib 2.12 and liboil 0.3.14.

	* gst/volume/gstvolume.c: (volume_process_double):
	Unconditionally use liboil 0.3.14 function.

2008-03-31  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_audio_caps):
	ms-gsm can have arbitrarty sample rates. See #481354.

2008-03-28  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_video_caps):
	MP4S is generic MPEG-4, not a microsoft variant.

2008-03-27  Michael Smith <msmith@fluendo.com>

	* gst/gdp/gstgdpdepay.c: (gst_gdp_depay_chain):
	  Check the body CRC (if set) when depayloading.
	  Fixes #522401.

2008-03-24  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/pango/gsttextoverlay.c: (gst_text_overlay_class_init):
	  Fix Since: version for new property.

2008-03-24  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/rtsp/gstrtspconnection.c:
	(gst_rtsp_connection_connect), (gst_rtsp_connection_write),
	(gst_rtsp_connection_read_internal), (gst_rtsp_connection_poll):
	Don't error when poll_wait returns EAGAIN.
