@@ -2357,7 +2357,10 @@ gst_ogg_demux_read_chain (GstOggDemux * ogg, GstOggChain ** res_chain)
   }
 
   if (ret != GST_FLOW_OK || chain == NULL) {
-    if (ret != GST_FLOW_UNEXPECTED) {
+    if (chain == NULL) {
+      GST_WARNING_OBJECT (ogg, "no chain was found");
+      ret = GST_FLOW_ERROR;
+    } else if (ret != GST_FLOW_UNEXPECTED) {
       GST_WARNING_OBJECT (ogg, "failed to read chain");
     } else {
       GST_DEBUG_OBJECT (ogg, "done reading chains");
